feat: added more data to token generated and fixed db schema
