# internal/docs/swagger.yaml
@@ -6,15 +6,8 @@ definitions:
         type: string
       id:
         type: string
-    type: object
-  core_handlers_auth.RegisterResponse:
-    properties:
-      accessToken:
+      profileId:
         type: string
-      refreshToken:
-        type: string
-      user:
-        $ref: '#/definitions/EmailID'
     type: object
   github_com_adeyemialameen04_unwind-be_core_server.Response:
     properties:
@@ -25,31 +18,29 @@ definitions:
       status:
         type: string
     type: object
-  github_com_adeyemialameen04_unwind-be_internal_db_repository.Book:
+  github_com_adeyemialameen04_unwind-be_internal_db_repository.Profile:
     properties:
-      author:
+      coverPic:
         type: string
       createdAt:
         type: string
       id:
         type: string
-      title:
+      name:
+        type: string
+      profilePic:
         type: string
       updatedAt:
         type: string
-    required:
-    - author
-    - title
-    type: object
-  github_com_adeyemialameen04_unwind-be_internal_db_repository.InsertBookParams:
-    properties:
-      author:
+      userId:
         type: string
-      title:
+      username:
+        minLength: 8
         type: string
     required:
-    - author
-    - title
+    - id
+    - userId
+    - username
     type: object
   github_com_adeyemialameen04_unwind-be_internal_db_repository.RegisterUserParams:
     properties:
@@ -60,6 +51,45 @@ definitions:
     required:
     - email
     - password
+    type: object
+  github_com_adeyemialameen04_unwind-be_internal_db_repository.UpdateProfileParams:
+    properties:
+      coverPic:
+        type: string
+      id:
+        type: string
+      name:
+        type: string
+      profilePic:
+        type: string
+      username:
+        minLength: 8
+        type: string
+    required:
+    - id
+    - username
+    type: object
+  github_com_adeyemialameen04_unwind-be_internal_domain.AuthResponse:
+    properties:
+      accessToken:
+        type: string
+      refreshToken:
+        type: string
+      user:
+        $ref: '#/definitions/EmailID'
+    type: object
+  github_com_adeyemialameen04_unwind-be_internal_domain.RegisterRequest:
+    properties:
+      email:
+        type: string
+      password:
+        type: string
+      username:
+        type: string
+    required:
+    - email
+    - password
+    - username
     type: object
 host: localhost:8080
 info:
@@ -93,7 +123,7 @@ paths:
             - $ref: '#/definitions/github_com_adeyemialameen04_unwind-be_core_server.Response'
             - properties:
                 data:
-                  $ref: '#/definitions/core_handlers_auth.RegisterResponse'
+                  $ref: '#/definitions/github_com_adeyemialameen04_unwind-be_internal_domain.AuthResponse'
               type: object
         "400":
           description: Invalid request data
@@ -118,6 +148,8 @@ paths:
       produces:
       - application/json
       responses: {}
+      security:
+      - RefreshTokenBearer: []
       summary: Refreh Token
       tags:
       - Auth
@@ -132,7 +164,7 @@ paths:
         name: EmailAndPassword
         required: true
         schema:
-          $ref: '#/definitions/github_com_adeyemialameen04_unwind-be_internal_db_repository.RegisterUserParams'
+          $ref: '#/definitions/github_com_adeyemialameen04_unwind-be_internal_domain.RegisterRequest'
       produces:
       - application/json
       responses:
@@ -143,7 +175,7 @@ paths:
             - $ref: '#/definitions/github_com_adeyemialameen04_unwind-be_core_server.Response'
             - properties:
                 data:
-                  $ref: '#/definitions/core_handlers_auth.RegisterResponse'
+                  $ref: '#/definitions/github_com_adeyemialameen04_unwind-be_internal_domain.AuthResponse'
               type: object
         "400":
           description: Invalid request data
@@ -160,74 +192,35 @@ paths:
       summary: Create an account
       tags:
       - Auth
-  /books:
-    get:
+  /user/profile:
+    patch:
       consumes:
       - application/json
-      description: Get a list of all books
+      description: Updates a user profile
       parameters:
-      - description: Bearer token
-        in: header
-        name: Authorization
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Books retrieved successfully
-          schema:
-            allOf:
-            - $ref: '#/definitions/github_com_adeyemialameen04_unwind-be_core_server.Response'
-            - properties:
-                data:
-                  items:
-                    $ref: '#/definitions/github_com_adeyemialameen04_unwind-be_internal_db_repository.Book'
-                  type: array
-              type: object
-      summary: Get all books
-      tags:
-      - Books
-    post:
-      consumes:
-      - application/json
-      description: Insert a new book into the database
-      parameters:
-      - description: Book data
+      - description: Profile Data
         in: body
         name: book
         required: true
         schema:
-          $ref: '#/definitions/github_com_adeyemialameen04_unwind-be_internal_db_repository.InsertBookParams'
+          $ref: '#/definitions/github_com_adeyemialameen04_unwind-be_internal_db_repository.UpdateProfileParams'
       produces:
       - application/json
       responses:
-        "201":
-          description: Book created successfully
+        "200":
+          description: OK
           schema:
             allOf:
             - $ref: '#/definitions/github_com_adeyemialameen04_unwind-be_core_server.Response'
             - properties:
                 data:
-                  $ref: '#/definitions/github_com_adeyemialameen04_unwind-be_internal_db_repository.Book'
+                  $ref: '#/definitions/github_com_adeyemialameen04_unwind-be_internal_db_repository.Profile'
               type: object
-        "400":
-          description: Invalid request data
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "500":
-          description: Failed to start transaction or insert book
-          schema:
-            additionalProperties:
-              type: string
-            type: object
       security:
       - AccessTokenBearer: []
-      summary: Create a new book
+      summary: Update Profile
       tags:
-      - Books
+      - User
 securityDefinitions:
   AccessTokenBearer:
     description: AccessTokenBearer Authentication
